@@ -7,6 +7,7 @@ LIB_OBJECTS = \
 	../io/mmap_file.$(OBJEXT) \
 	../io/wincall_file.$(OBJEXT) \
 	../io/boostfd_file.$(OBJEXT) \
+	../io/mem_file.$(OBJEXT) \
 	../io/iostats.$(OBJEXT) \
 	../mng/mng.$(OBJEXT) \
 	../algo/async_schedule.$(OBJEXT) \
